fix z-index menu-header-link

--- a/css/main.css
+++ b/css/main.css
@@ -38,9 +38,9 @@
 .header__item-link{
     font-size: 1.6rem;
     color: #fff;
-    padding: 0 18px;
+    padding: 8px 18px;
     position: relative;
-    z-index: 1;
+    z-index: 9;
 }
 
 .btn.header__book-btn{
@@ -99,7 +99,6 @@
 
 .menu-child__item{
     position: relative;
-    padding: 15px 25px;
     border-bottom: 1px solid #b5b7bc25;
 }
 
@@ -119,6 +118,7 @@
     color: #b5b7bc;
     font-size: 1.6rem;
     line-height: 1.4rem;
+    padding: 15px 25px;
     display: flex;
     justify-content: space-between;
     align-items: center;
